--- a/roles/instance_collect_role/default/main.yml
+++ b/roles/instance_collect_role/default/main.yml
@@ -1,2 +1,2 @@
 ---
-kepler_model_server_image: quay.io/sustainable_computing_io/kepler_model_server:v0.7
+kepler_model_server_image: quay.io/sustainable_computing_io/kepler_model_server:latest
