--- a/group_vars/local.yml
+++ b/group_vars/local.yml
@@ -2,11 +2,14 @@ secuirty_group: sg-cda39bb6
 volume_size: 120
 key_name: kepler-ci-key
 instance_list:
-- m5zn.metal 
-- i3.metal 
-- m5dn.metal
-- m5n.metal
-- c5d.metal 
-- c7i.metal-24xl
-- i3en.metal 
-- m7i.metal-24xl 
+- m5.metal # general purpose
+- m5zn.metal # multi-processor general-purpose fastest Intel Xeon Scalable processors with turbo boost
+- i3.metal # storage optimized High Frequency Intel Xeon Scalable Processors (Broadwell E5-2686 v4) with base frequency of 2.3 GHz
+- c5.metal # compute optimized
+# --------------------------------------
+# - m7i.metal-24xl
+# - c7i.metal-24xl  
+# - i3en.metal
+# - m5n.metal # different from m5.metal only for network
+# - m5dn.metal # different from m5n.metal only the instance storage
+# - c5d.metal # different from c5.metal only the instance storage
